Resolve social icons invisibility

--- a/Scss/_responsive.scss
+++ b/Scss/_responsive.scss
@@ -2,14 +2,14 @@
 @mixin navbarPhone() {
 	.navbar {	
 		position: relative;
-		padding: .3em 2em;
+		// padding: .3em 1em;
 		
 		.menu {
 			ul {
 				display: unset;
 				height: 100vh;
 				width: 100%;
-				z-index: 99;
+				z-index: -10;
 				top: 0;
 				right: 0;
 				position: absolute;
@@ -19,7 +19,7 @@
 				padding-top: 60px;
 		
 				a  {
-					// padding: 8px 8px 8px 32px;
+					padding: 8px 8px 8px 32px;
 					text-decoration: none;
 					font-size: 1rem;
 					color: #818181;
@@ -40,7 +40,7 @@
 				top: 50%;
 				right: 25px;
 				z-index: 999;
-				color: $bodyTxtColor;
+				color: $bodyBgColor;
 				position: absolute;
 				cursor: pointer;
 			}
